--- a/esmvaltool/recipes/recipe_runoff_et.yml
+++ b/esmvaltool/recipes/recipe_runoff_et.yml
@@ -14,7 +14,7 @@ documentation:
 
   references:
     - duemenil00mpimr
-    - hagemann13jadvmodelearthsyst
+    - hagemann13james
     - weedon14wrr
 
   projects:
