--- a/esmvaltool/config-references.yml
+++ b/esmvaltool/config-references.yml
@@ -43,6 +43,10 @@ authors:
     name: Righi, Mattia
     institute: DLR, Germany
     email: mattia.righi 'at' dlr.de
+  schl_ma:
+    name: Schlund, Manuel
+    institute: DLR, Germany
+    email: manuel.schlund 'at' dlr.de
   vega_ja:
     name: Vegas-Regidor, Javier
     institute: BSC, Spain
@@ -59,7 +63,7 @@ authors:
   arno_en:
     name: Arnone, Enrico
     institute: ISAC-CNR, Torino, Italy
-    email: e.arnone 'at' isac.cnr.it 
+    email: e.arnone 'at' isac.cnr.it
   bock_ls:
     name: Bock, Lisa
     institute: DLR, Germany
@@ -109,7 +113,7 @@ authors:
   hard_jo:
     name: von Hardenberg, Jost
     institute: ISAC-CNR, Torino, Italy
-    email: j.vonhardenberg 'at' isac.cnr.it    
+    email: j.vonhardenberg 'at' isac.cnr.it
   hemp_ni:
     name: Hempelmann, Nils
     institute: IPSL, France
@@ -138,7 +142,7 @@ authors:
     name: Kunert, Dominik
     institute: DLR, Germany
     email: dominik.kunert 'at' dlr.de
-  lee_dm:
+  demo_le:
     name: de Mora, Lee
     institute: PML, UK
     email: ledm 'at' pml.ac.uK
@@ -208,10 +212,6 @@ authors:
     name: Roehrig, Romain
     institute: MeteoFr, France
     email: romain.roehrig 'at' meteo.fr
-  schl_ma:
-    name: Schlund, Manuel
-    institute: DLR, Germany
-    email: manuel.schlund 'at' dlr.de
   senf_da:
     name: Senftleben, Daniel
     institute: DLR, Germany
@@ -424,7 +424,7 @@ references:
   bianchi12gbc: "Bianchi, D. et al., Global Biogeochem. Cy., 26, GB2009, doi:10.1029/2011GB004209, 2012."
   cionni11acp: "Cionni et al., Atmos. Chem. Phys., 11, 11267-11292, doi:10.5194/acp-11-11267-2011, 2011."
   clivar09jclim: "CLIVAR Madden-Julian Oscillation Working Group, J. Climate, 22, 3006-3030, doi:10.1175/2008JCLI2731.1, 2009."
-  demora2018: "de Mora et al., Geosci. Model Dev., 11, 4215-4240, https://doi.org/10.5194/gmd-11-4215-2018, 2018."
+  demora2018gmd: "de Mora et al., Geosci. Model Dev., 11, 4215-4240, doi:10.5194/gmd-11-4215-2018, 2018."
   dong08grl: "Dong, S. et al., J. Geophys. Res., 113, C06013, doi:10.1029/2006JC004051, 2008."
   donofrio14jh: "D'Onofrio et al., J of Hydrometeorology 15, 830-843, 2014."
   duemenil00mpimr: "Duemenil Gates et al., Observed historical discharge data from major rivers for climate model validation. Max Planck Institute for Meteorology Report 307, Hamburg, Germany, 2000."
@@ -435,7 +435,7 @@ references:
   gen14jclim: "Gen, L. et al., J. Climate, 27, 1765-1780, doi:10.1175/JCLI-D-13-00337.1, 2014."
   gleckler08jgr: "Gleckler et al., J. Geophys. Res., 113, D06104, doi:10.1029/2007JD008972, 2008."
   goswami99qjrms: "Goswami, B., V. Krishnamurthy, and H. Annamalai, Q. J. R. Meteorol. Soc., 125, 611-633, doi:10.1002/qj.49712555412, 1999."
-  hagemann13jadvmodelearthsyst: "Hagemann et al., J. Adv. Model. Earth Syst., 5, doi:10.1029/2012MS000173, 2013."
+  hagemann13james: "Hagemann et al., J. Adv. Model. Earth Syst., 5, doi:10.1029/2012MS000173, 2013."
   jones15james: "Jones et al., J. Adv. Model. Earth Syst., 7, 1554-1575, doi:10.1002/2014MS000416, 2015."
   kerry06jclim: "Kerry H. et al, J. Climate, 19, 3681-3703, doi:10.1175/JCLI3814.1, 2006."
   kim09jclim: "Kim, D. et al., J. Climate, 22, 6413-6436, doi:10.1175/2009JCLI3063.1, 2009."
@@ -443,8 +443,8 @@ references:
   key04gbc: "Key, R. M. et al., Global Biogeochem. Cy., 18, GB4031, doi:10.109/2004GB002247, 2004."
   lauer05acp: "Lauer et al., Atmos. Chem. Phys., 5, 3251-3276, doi:10.5194/acp-5-3251-2005, 2005."
   lauer13jclim: "Lauer and Hamilton, J. Climate, 26, 3823-3845, doi:10.1175/JCLI-D-12-00451.1, 2013."
-  lauer17rse: "Lauer et al., Remote Sens. Environ., in press, 2017."
-  li14jclim: "Li and Xie, J. Climate, 27, 1765-1780, doi:https://doi.org/10.1175/JCLI-D-13-00337.1, 2014."
+  lauer17rse: "Lauer et al., Remote Sens. Environ., 203, 9-39, doi:10.1016/j.rse.2017.01.007, 2017."
+  li14jclim: "Li and Xie, J. Climate, 27, 1765-1780, doi:10.1175/JCLI-D-13-00337.1, 2014."
   lin08jclim: "Lin, J-L. et al., J. Climate, 21, 4541-4567, doi: 10.1175/2008JCLI1816.1, 2008."
   lloyd-hughes02jclim: "Lloyd-Hughes, B. and Saunders, M. A., Int. J. Climatol., 22, 1571-1592, doi:10.1002/joc.846, 2002."
   locarini10usgov: "Locarnini, R. A. et al., World Ocean Atlas 2009, Volume 1: Temperature. S. Levitus, Ed. NOAA Atlas NESDIS 68, U.S. Government Printing Office, Washington, D.C., 184 pp.,2010."
