--- a/esmvaltool/recipes/recipe_OceanPhysics.yml
+++ b/esmvaltool/recipes/recipe_OceanPhysics.yml
@@ -9,10 +9,10 @@ documentation:
     Written by Lee de Mora, Plymouth Marine Laboratory
 
   authors:
-    - lee_dm
+    - demo_le
 
   references:
-    - demora2018
+    - demora2018gmd
 
   projects:
     - ukesm
