--- a/esmvaltool/recipes/recipe_OceanQuadMap.yml
+++ b/esmvaltool/recipes/recipe_OceanQuadMap.yml
@@ -9,11 +9,10 @@ documentation:
     Written by Lee de Mora, Plymouth Marine Laboratory
 
   authors:
-    - lee_dm
+    - demo_le
 
   references:
-    - demora2018
-    - Ocean Assess (Met Office) - no reference available.
+    - demora2018gmd
 
   projects:
     - ukesm
