--- a/esmvaltool/recipes/recipe_autoassess_landsurface_surfrad.yml
+++ b/esmvaltool/recipes/recipe_autoassess_landsurface_surfrad.yml
@@ -1,19 +1,19 @@
-#################
-#it runs:
-#  - surfrad
-#################
-#### CAVEATS
-# land-sea masks are not averaged over time (annual)
-# but are fixed i.e. using sftlf (lat-lon) grid
-# (the original Autoassess diagnostic used time-dependent .pp masks -
-# these can still be implemented if present in autoassess_source)
-#################
-# RECIPE IS FULLY WORKING BUT MASKS NEED TO BE CHECKED !!!
-###########################################################################################################
+# ESMValTool
+# recipe_autoassess_landsurface_surfrad.yml
 ---
 documentation:
-  description: Recipe that runs the Autoassess Land-surface assessment area diagnostic.
+  description: |
+    Recipe that runs the Autoassess Land-surface assessment area diagnostic.
+    Land-sea masks are not averaged over time (annual) but are fixed, i.e.
+    using sftlf (lat-lon) grid. The original  Autoassess diagnostic used
+    time-dependent .pp masks these can still be implemented if present in
+    autoassess_source. The recipe is fully working but masks need to be
+    checked.
+
   authors:
+    - pred_va
+
+  maintainer:
     - pred_va
 
 datasets:
