--- a/esmvaltool/recipes/recipe_autoassess_landsurface_soilmoisture.yml
+++ b/esmvaltool/recipes/recipe_autoassess_landsurface_soilmoisture.yml
@@ -1,24 +1,19 @@
-#################
-#it runs:
-#  - soilmoisture
-#################
-#### CAVEATS
-# climatological files are stored externally:
-# JASMIN: /group_workspaces/jasmin4/esmeval/for_vp/obs_etc
-# clim: ecv_soil_moisture
-##################
-# ISSUES
-# ################
-# MISSING variables:
-# mass_fraction_of_unfrozen_water_in_soil_moisture
-# mass_fraction_of_frozen_water_in_soil_moisture
-#################
-# RECIPE IS NOT FULLY WORKING !!!
-###########################################################################################################
+# ESMValTool
+# recipe_autoassess_landsurface_soilmoisture.yml
 ---
 documentation:
-  description: Recipe that runs the Autoassess Land-surface assessment area diagnostic.
+  description: |
+    Recipe that runs the Autoassess Land-surface assessment area diagnostic.
+    Climatological files are stored externally to avoid overloading the
+    ESMValTool source. See /group_workspaces/jasmin4/esmeval/for_vp/obs_etc
+    (on JASMIN).
+    Missing variable mass_fraction_of_unfrozen_water_in_soil_moisture and
+    mass_fraction_of_frozen_water_in_soil_moisture.
+
   authors:
+    - pred_va
+
+  maintainer:
     - pred_va
 
 datasets:
