Add maintainer and reformat header in cloud and cvdp recipes

--- a/esmvaltool/recipes/recipe_clouds_ipcc.yml
+++ b/esmvaltool/recipes/recipe_clouds_ipcc.yml
@@ -1,11 +1,15 @@
+# ESMValTool
 # recipe_clouds_ipcc.yml
 ---
 documentation:
   description: |
-    Diagnostics of clouds and hydrological cycle: multi-model mean bias,
-    zonal means; similar to IPCC AR5 fig. 9.5
+    Diagnostics of clouds and hydrological cycle multi-model mean bias,
+    zonal means; similar to IPCC AR5 fig. 9.5.
 
   authors:
+    - laue_ax
+
+  maintainer:
     - laue_ax
 
   references:
