--- a/esmvaltool/recipes/recipe_flato13ipcc.yml
+++ b/esmvaltool/recipes/recipe_flato13ipcc.yml
@@ -1,16 +1,20 @@
+# ESMValTool
 # recipe_flato13ipcc.yml
 ---
 documentation:
 
   description: |
     Reproducing selected figures from IPCC AR5, chap. 9 (Flato et al., 2013)
-    9.2, 9.4, 9.5, 9.8, 9.42a
+    9.2, 9.4, 9.5, 9.8, 9.42a.
 
   authors:
     - bock_ls
     - laue_ax
     - schl_ma
 
+  maintainer:
+    - righ_ma
+    
   references:
     - flato13ipcc
 
