--- a/esmvaltool/recipes/recipe_clouds_bias.yml
+++ b/esmvaltool/recipes/recipe_clouds_bias.yml
@@ -1,11 +1,15 @@
+# ESMValTool
 # recipe_clouds_bias.yml
 ---
 documentation:
   description: |
-    Diagnostics of clouds and hydrological cycle: multi-model mean, mean bias,
-    absolute bias, relative bias
+    Diagnostics of clouds and hydrological cycle multi-model mean, mean bias,
+    absolute bias, relative bias.
 
   authors:
+    - laue_ax
+
+  maintainer:
     - laue_ax
 
   references:
