--- a/esmvaltool/recipes/recipe_OceanPhysics.yml
+++ b/esmvaltool/recipes/recipe_OceanPhysics.yml
@@ -1,4 +1,4 @@
-###############################################################################
+# ESMValTool
 # recipe_OceanPhysics.yml
 ---
 documentation:
@@ -6,10 +6,12 @@ documentation:
     Recipe to demonstrate several simple plots based on the monthly ocean
     temperature. Please use this file as a template for adding additional
     fields into the ocean. This work based on the BGC-val toolkit GMD-2018-103.
-    Written by Lee de Mora, Plymouth Marine Laboratory
 
   authors:
     - demo_le
+
+  maintainer:
+    - schl_ma
 
   references:
     - demora2018gmd
