--- a/esmvaltool/recipes/recipe_OceanQuadMap.yml
+++ b/esmvaltool/recipes/recipe_OceanQuadMap.yml
@@ -1,4 +1,4 @@
-###############################################################################
+# ESMValTool
 # recipe_OceanQuadMap.yml
 ---
 documentation:
@@ -6,10 +6,11 @@ documentation:
     Recipe to demonstrate the Diagnostic Maps quad.
     Based on the ocean assess/Marine Assess toolkit plots.
 
-    Written by Lee de Mora, Plymouth Marine Laboratory
-
   authors:
     - demo_le
+
+  maintainer:
+    - schl_ma
 
   references:
     - demora2018gmd
