--- a/esmvaltool/recipes/recipe_SeaIceExtent.yml
+++ b/esmvaltool/recipes/recipe_SeaIceExtent.yml
@@ -1,13 +1,15 @@
-###############################################################################
-# recipe_SeaIce.yml
+# ESMValTool
+# recipe_SeaIceExtent.yml
 ---
 documentation:
   description: |
     Recipe to demonstrate several sea ice plots based.
-    Written by Lee de Mora, Plymouth Marine Laboratory
 
   authors:
     - demo_le
+
+  maintainer:
+    - schl_ma
 
   references:
     - demora2018gmd
