--- a/esmvaltool/recipes/recipe_ocean_amoc.yml
+++ b/esmvaltool/recipes/recipe_ocean_amoc.yml
@@ -1,8 +1,8 @@
-###############################################################################
-# recipe_amoc.yml
+# ESMValTool
+# recipe_ocean_amoc.yml
 
 documentation:
-  description:
+  description: |
     Recipe to produce time series figures of the derived variable, the
     Atlantic meriodinal overturning circulation (AMOC).
     This recipe also produces transect figures of the stream functions for
@@ -10,6 +10,9 @@ documentation:
 
   authors:
     - demo_le
+
+  maintainer:
+    - schl_ma
 
   references:
     - demora2018gmd
