--- a/esmvaltool/recipes/recipe_ocean_scalar_fields.yml
+++ b/esmvaltool/recipes/recipe_ocean_scalar_fields.yml
@@ -1,5 +1,5 @@
-###############################################################################
-# recipe_scarlar_fields.yml
+# ESMValTool
+# recipe_ocean_scarlar_fields.yml
 ---
 documentation:
   description: |
@@ -7,10 +7,12 @@ documentation:
     These fluxes are saved as MFO files in CMIP5.
     Please use this file as a template for adding additional
     fields into the ocean. This work based on the BGC-val toolkit GMD-2018-103.
-    Written by Lee de Mora, Plymouth Marine Laboratory
 
   authors:
     - demo_le
+
+  maintainer:
+    - schl_ma
 
   references:
     - demora2018gmd
