--- a/esmvaltool/recipes/recipe_runoff_et.yml
+++ b/esmvaltool/recipes/recipe_runoff_et.yml
@@ -1,7 +1,8 @@
+# ESMValTool
 # recipe_runoff_et.yml
 ---
 documentation:
-  description:
+  description: |
     Recipe for plotting runoff and ET diagnostics. The diagnostics calculates water
     balance components for different catchments and compares the results against
     observations. Currently, the required catchment mask needs to be downloaded manually
@@ -11,6 +12,9 @@ documentation:
     - hage_st
     - loew_al
     - stac_to
+
+  maintainer:
+    - righ_ma
 
   references:
     - duemenil00mpimr
