--- a/esmvaltool/recipes/examples/recipe_ncl.yml
+++ b/esmvaltool/recipes/examples/recipe_ncl.yml
@@ -1,3 +1,5 @@
+# ESMValTool
+# recipe_ncl.yml
 ---
 documentation:
   description: |
@@ -6,6 +8,9 @@ documentation:
   authors:
     - righ_ma
 
+  maintainer:
+    - righ_ma
+    
   references:
     - acknow_project
 
