--- a/esmvaltool/recipes/examples/recipe_python.yml
+++ b/esmvaltool/recipes/examples/recipe_python.yml
@@ -1,3 +1,5 @@
+# ESMValTool
+# recipe_python.yml
 ---
 documentation:
   description: |
@@ -7,6 +9,9 @@ documentation:
     - ande_bo
     - righ_ma
 
+  maintainer:
+    - schl_ma
+    
   references:
     - acknow_project
 
