--- a/esmvaltool/recipes/examples/recipe_TestMaskThreshold.yml
+++ b/esmvaltool/recipes/examples/recipe_TestMaskThreshold.yml
@@ -1,18 +1,20 @@
-###############################################################################
-# recipe_OceanPhysics.yml
+# ESMValTool
+# recipe_TestMaskThreshold.yml
 ---
 documentation:
   description: |
     Recipe to demonstrate several simple plots based on the monthly ocean
     temperature. Please use this file as a template for adding additional
     fields into the ocean. This work based on the BGC-val toolkit GMD-2018-103. 
-    Written by Lee de Mora, Plymouth Marine Laboratory
     
   authors:
     - ledm
 
+  maintainer:
+    - pred_va
+    
   references:
-    - BGC-val:gmd-2018-103
+    - demora2018gmd
 
   projects:
     - ukesm
