--- a/esmvaltool/recipes/examples/recipe_python_object_oriented.yml
+++ b/esmvaltool/recipes/examples/recipe_python_object_oriented.yml
@@ -1,8 +1,14 @@
+# ESMValTool
+# recipe_python_object_oriented.yml
 ---
 documentation:
   description: |
     Example recipe that runs a Python example diagnostic with a more object oriented interface.
+
   authors:
+    - schl_ma
+
+  maintainer:
     - schl_ma
 
 datasets:
