--- a/esmvaltool/recipes/examples/recipe_r.yml
+++ b/esmvaltool/recipes/examples/recipe_r.yml
@@ -1,9 +1,14 @@
+# ESMValTool
 # recipe_example_r.yml
 ---
 documentation:
   description: Recipe for example diagnostic written in R.
+  
   authors: 
     - arno_en
+
+  maintainer:
+    - ande_bo
 
 datasets:
   - {dataset: EC-EARTH, project: CMIP5, exp: historical, ensemble: r1i1p1, start_year: 1997, end_year: 1997}
