use new observation references tag

--- a/esmvaltool/recipes/recipe_landcover.yml
+++ b/esmvaltool/recipes/recipe_landcover.yml
@@ -13,8 +13,10 @@ documentation:
     - stac_to
 
   references:
-    - esacci-landcover
     - georgievski18tac
+
+  observation references:
+    - esacci-landcover
 
   projects:
     - crescendo
