--- a/esmvaltool/recipes/recipe_ocean_bgc.yml
+++ b/esmvaltool/recipes/recipe_ocean_bgc.yml
@@ -10,14 +10,10 @@ documentation:
     Written by Lee de Mora, Plymouth Marine Laboratory, ledm@pml.ac.uk
 
   authors:
-    - ledm
+    - demo_le
 
   references:
-    - "de Mora, L., Yool, A., Palmieri, J., Sellar, A., Kuhlbrodt, T., Popova,
-      E., Jones, C., and Allen, J. I.: BGC-val: a model- and grid-independent
-      Python toolkit to evaluate marine biogeochemical models,
-      Geosci. Model Dev., 11, 4215-4240, https://doi.org/10.5194/gmd-11-4215-2018,
-      2018."
+    - demora2018gmd
 
   projects:
     - ukesm
