--- a/meta.yaml
+++ b/meta.yaml
@@ -34,24 +34,25 @@ requirements:
     - python {{ python }}
     # Normally installed via pip:
     - setuptools_scm
-    - r-base
-    - r-rcpp
-    - libgfortran-ng
   run:
     # esmvaltool
     - python
+    - graphviz    
     - iris=1.13
     - python-stratify
     # Normally installed via pip:
     - cartopy
     - cf_units
     - cython
+    - esmpy
     - matplotlib<3
     - netCDF4
     - numba
     - numpy
     - pillow
+    - prov
     - psutil
+    - pydot
     - python-cdo
     - pyyaml
     - shapely
@@ -61,13 +62,11 @@ requirements:
     # Multi language support:
     - ncl
     - ncurses=6.1=hfc679d8_1
-    - gcc
-    - r-base
-    - r-rcpp
-    - libgfortran-ng
     - julia=0.6.1
     - hdf5
     - cdo=1.9.3
+    - r-base
+    - r-rcpp
 test:
   # TODO: add unit tests? This seems to require installing the tests
   imports:
