--- a/esmvaltool/utils/testing/recipe_settings/install.sh.template
+++ b/esmvaltool/utils/testing/recipe_settings/install.sh.template
@@ -8,7 +8,7 @@
 #BSUB -n 16
 
 set -eo pipefail
-wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
+wget -nv https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh
 bash Miniconda3-latest-Linux-x86_64.sh -b -p conda
 . conda/etc/profile.d/conda.sh
 git clone --depth 1 https://github.com/ESMValGroup/ESMValTool
