--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -311,7 +311,9 @@ workflows:
     jobs:
       - python3_test
       - python2_test
+      - python2_install      
       - python3_install
+      - conda_build
   nightly:
     triggers:
       - schedule:
