Switch to pip install in development mode because of Jasmin filesystem issues

--- a/esmvaltool/utils/testing/recipe_settings/install.sh.template
+++ b/esmvaltool/utils/testing/recipe_settings/install.sh.template
@@ -18,5 +18,5 @@ git checkout {branch}
 # TODO: add option to merge with development branch
 conda env create --name esmvaltool
 conda activate esmvaltool
-python setup.py install
+pip install -e .
 Rscript esmvaltool/install/R/setup.R
